--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://kit.fontawesome.com/1deceb3148.js" crossorigin="anonymous"></script>
     <!-- linking stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
-    <title>Website Design 1</title>
+    <title>Learn Prog. | Codifier SAADi</title>
 </head>
 
 <body>
